--- a/css/common.css
+++ b/css/common.css
@@ -7,7 +7,7 @@
 h1{font-size:24px}
 h2{padding:30px 0 5px;border-bottom:1px solid #333;font-size:18px;text-align:center}
 h3{padding-bottom:15px;font-size:16px}
-.markup{position:relative;padding:64px 0 100px;font-size:16px}
+.markup{position:relative;padding:64px 0 50px;font-size:16px}
 .markup li a{background:none}
 .markup li span{color:#000}
 table{width:100%}
@@ -20,7 +20,7 @@ th{text-align:center}
 .th_03{width:22%}
 .th_01,.th_02,.th_03,.th_04{background:#cdcdcd;color:#000}
 .inner{margin:50px auto 0;width:100%;max-width:1024px}
-.giscus{margin:0 auto;max-width:1024px}
+.giscus{margin:0 auto;padding-bottom:100px;max-width:1024px}
 
 /* input radio */
 .rdo_area{min-width:1024px;margin:40px 0 20px;text-align: center;}
