--- a/css/common.css
+++ b/css/common.css
@@ -1,13 +1,13 @@
 @charset "utf-8";
-.header{position:fixed;top:0;left:0;z-index:99;width:200px;height:100%;background:#260048;opacity:0.7;text-align:center;color:#fff;line-height:64px;}
-.header .inner{margin:0 auto;padding-top:50px;height:100%}
-.gnb .menu_list .menu{display:block;height:64px}
+.header{position:fixed;top:0;left:0;z-index:99;width:100%;height:64px;background:#260048;opacity:0.7;text-align:center;color:#fff;line-height:64px;}
+.header .inner{margin:0 auto;width:100%;min-width:1024px;height:100%}
+.gnb .menu_list .menu{display:inline-block;height:64px}
 .gnb .menu_list .menu .link{display:inline-block;margin:0 10px;padding:0 15px;font-size:16px;color:#fff}
 .gnb .menu_list .menu:hover .link, .gnb .menu_list .menu:focus .link,.gnb .menu_list .menu.is_active .link{color:yellow;font-weight:bold;text-decoration:underline}
 h1{font-size:24px}
 h2{padding:30px 0 5px;text-align:center}
 h3{padding-bottom:15px;font-size:16px}
-.markup{position:relative;margin-left:200px;padding:0 20px 50px;font-size:16px}
+.markup{position:relative;padding:64px 0 100px;font-size:16px}
 .markup li a{background:none}
 .markup li span{color:#000}
 table{width:100%}
