--- a/css/grid_layout.css
+++ b/css/grid_layout.css
@@ -21,6 +21,7 @@
 .container.w_650{margin:0 auto;width:650px;padding:1em}
 .img_box{display:inline-block;margin:9px 0}
 .img_box img{max-width:100%}
+li img{display:block;width:100%;height:100%;object-fit:cover}
 .title{text-align:left}
 code{margin:9px 0;padding:10px 20px;border-radius:6px;background:#eaeef2;font-size:14px;color:#111;font-family:Inconsolata}
 code .element{display:block;padding-left: 20px}
@@ -186,9 +187,28 @@ code .annotation{color:#11ad11}
 .wrap.step5 .grid_container.grid_ex5 .grid_item1{grid-column:col1-start / col2-start 2}
 .wrap.step5 .grid_container.grid_ex5 .grid_item2{grid-row:2;grid-column:col1-start 2 / span 2 col1-start}
 
-
-
-
+/* STEP 6 */
+.wrap.step6 .grid_container.grid_ex1{grid-template-columns:repeat(3, 1fr);gap:10px}
+.wrap.step6 .grid_container.grid_ex2{grid-template-columns:repeat(3, 1fr);gap:10px;grid-auto-rows:100px}
+.wrap.step6 .grid_container.grid_ex3{grid-template-columns:repeat(3, 1fr);gap:10px;grid-auto-rows:minmax(100px, auto)}
+.wrap.step6 .grid_container.grid_ex4{grid-template-columns:repeat(3, 1fr);gap:10px;grid-auto-rows:100px 200px}
+.wrap.step6 .grid_container.grid_ex5{grid-template-rows:repeat(3, 200px);gap:10px;grid-auto-flow:column;grid-auto-columns:300px 100px}
+.wrap.step6 .grid_container.grid_ex6{grid-template-columns:repeat(4, 1fr);grid-auto-rows:100px;gap:10px}
+.wrap.step6 .grid_container.grid_ex6 .grid_item3{grid-column:3;grid-row:2 / 4}
+.wrap.step6 .grid_container.grid_ex6 .grid_item6{grid-column:1 / 3;grid-row:1 / 3}
+.wrap.step6 .grid_container.grid_ex7{grid-template-columns:repeat(4, 1fr);grid-auto-rows:100px;gap:10px}
+.wrap.step6 .grid_container.grid_ex7 .grid_item:nth-child(4n+1){grid-column-end:span 2;grid-row-end:span 2;background-color:#ffa94d}
+.wrap.step6 .grid_container.grid_ex7 .grid_item:nth-child(2){grid-column:3;grid-row:2 / 4}
+.wrap.step6 .grid_container.grid_ex7 .grid_item:nth-child(5){grid-column:1 / 3;grid-row:1 / 3}
+.wrap.step6 .grid_container.grid_ex8{grid-template-columns:repeat(4, 1fr);grid-auto-rows:100px;gap:10px;grid-auto-flow:dense}
+.wrap.step6 .grid_container.grid_ex8 .grid_item:nth-child(4n+1){grid-column-end:span 2;grid-row-end:span 2;background-color:#ffa94d}
+.wrap.step6 .grid_container.grid_ex8 .grid_item:nth-child(2){grid-column:3;grid-row:2 / 4}
+.wrap.step6 .grid_container.grid_ex8 .grid_item:nth-child(5){grid-column:1 / 3;grid-row:1 / 3}
+.wrap.step6 .grid_container.grid_ex9{grid-template-columns:repeat(auto-fill, minmax(120px, 1fr));gap:10px;grid-auto-flow:dense}
+.wrap.step6 .grid_container.grid_ex9 li.landscape{grid-column-end:span 2}
+.wrap.step6 .grid_container.grid_ex10 dl{display:grid;grid-template-columns:auto 1fr;margin:1em;max-width:300px}
+.wrap.step6 .grid_container.grid_ex10 dt{grid-column:1;font-weight:bold}
+.wrap.step6 .grid_container.grid_ex10 dd{grid-column:2;margin-inline-start:40px}
 
 
   /* Media Qeury */
