--- a/css/grid_layout.css
+++ b/css/grid_layout.css
@@ -23,10 +23,18 @@
 .img_box img{max-width:100%}
 li img{display:block;width:100%;height:100%;object-fit:cover}
 .title{text-align:left}
+ul.list{padding: 0 0 10px 4px;}
+ul.list .list_item:before{display:inline-block;margin-right:8px;width:4px;height:4px;border-radius:50%;background:#000;vertical-align:middle;content:''}
 code{margin:9px 0;padding:10px 20px;border-radius:6px;background:#eaeef2;font-size:14px;color:#111;font-family:Inconsolata}
+code.one_line_code{display:inline-block;margin:3px 0;padding:1px 7px;background:#eaeef2}
 code .element{display:block;padding-left: 20px}
 code .annotation{color:#11ad11}
+.link.external{text-decoration:underline;text-underline-position:under;color:#0069c2}
+.link.external:hover, .link.external:focus{text-decoration:none}
+.link.external:after{display:inline-block;margin-left:4px;width:10px;height:10px;-webkit-mask-image:url(../grid/img/external.svg);mask-image:url(../grid/img/external.svg);-webkit-mask-size:cover;mask-size:cover;background-color:#696969;content:''}
 .nested{padding:1em;border:2px solid #ffec99;border-radius:5px;background-color:#fff9db;}
+.wrapper{border:2px solid #ff4b4b;border-radius:4px}
+.wrapper > p {margin:1em;padding:1em;max-width:300px;border:2px solid #ffa94d;border-radius:5px;background-color:#ffd8a8;font-size:16px;color:#d9480f}
 .grid_container{display:grid;border:2px solid #ff4b4b;border-radius:4px}
 .grid_container .grid_item{padding:1em;border:2px solid #ff9481;border-radius:4px;background:rgba(255,99,71,.3);font-size:16px}
 .grid_container .grid_item:first-child{margin-top:0}
@@ -254,6 +262,29 @@ code .annotation{color:#11ad11}
 .wrap.step7 .grid_container.grid_ex9 .grid_item3{grid-area:c}
 .wrap.step7 .grid_container.grid_ex9 .grid_item4{grid-area:d}
 
+/* STEP 8 */
+.wrap.step8 .grid_container.grid_ex1{grid-template-columns:repeat(3,100px);grid-template-rows:repeat(2,100px);gap:10px;writing-mode: vertical-lr;}
+.wrap.step8 .grid_container.grid_ex2{grid-template-columns:repeat(3,100px);grid-template-rows:repeat(2,100px);gap:10px;writing-mode: vertical-lr;}
+.wrap.step8 .grid_container.grid_ex2 .grid_item1{grid-column:1 / 4;align-self:start}
+.wrap.step8 .grid_container.grid_ex2 .grid_item2{grid-column:1 / 3;grid-row:2 / 4;align-self:start}
+.wrap.step8 .grid_container.grid_ex2 .grid_item3{grid-column:3;grid-row:2 / 4;align-self:end;justify-self:end}
+.wrap.step8 .grid_container.grid_ex3{grid-template-columns:repeat(3,1fr);grid-template-rows:repeat(2,100px);gap:10px}
+.wrap.step8 .grid_container.grid_ex3 .grid_item1{grid-column:1}
+.wrap.step8 .grid_container.grid_ex3 .grid_item2{grid-column:-1 / -3}
+.wrap.step8 .grid_container.grid_ex3 .grid_item3{grid-column:1 / 3;grid-row:2}
+.wrap.step8 .grid_container.grid_ex4{grid-template-columns:repeat(3,1fr);grid-template-rows:repeat(2,100px);gap:10px;direction:rtl}
+.wrap.step8 .grid_container.grid_ex4 .grid_item1{grid-column:1}
+.wrap.step8 .grid_container.grid_ex4 .grid_item2{grid-column:-1 / -3}
+.wrap.step8 .grid_container.grid_ex4 .grid_item3{grid-column:1 / 3;grid-row:2}
+.wrap.step8 .grid_container.grid_ex5{grid-template-columns:1fr auto;grid-gap:20px;;padding:1em;font-size:16px}
+.wrap.step8 .grid_container.grid_ex5 nav{writing-mode:vertical-lr}
+.wrap.step8 .grid_container.grid_ex5 ul{display:flex;justify-content:space-between;margin:0;padding:1em}
+
+/* STEP 9 */
+.wrap.step9 .grid_container.grid_ex1 ul{display:grid;grid-template-columns:repeat(3,1fr);gap:20px;margin:0}
+.wrap.step9 .grid_container.grid_ex1 li{width:auto;min-height:auto;margin:0}
+
+
   /* Media Qeury */
   @media (min-width: 500px) {
     .wrap.step4 .grid_container.grid_ex4 {
@@ -270,4 +301,8 @@ code .annotation{color:#11ad11}
         "hd hd hd   hd   hd   hd   hd   hd hd"
         "sd sd main main main main main ft ft";
     }
+  }
+  @supports (display:grid) {
+    .wrap.step9 .grid_container.grid_ex1 ul{display:grid;grid-template-columns:repeat(3,1fr);gap:20px;margin:0}
+    .wrap.step9 .grid_container.grid_ex1 li{width:auto;min-height:auto;margin:0}
   }
