--- a/css/grid_layout.css
+++ b/css/grid_layout.css
@@ -263,8 +263,8 @@ code .annotation{color:#11ad11}
 .wrap.step7 .grid_container.grid_ex9 .grid_item4{grid-area:d}
 
 /* STEP 8 */
-.wrap.step8 .grid_container.grid_ex1{grid-template-columns:repeat(3,100px);grid-template-rows:repeat(2,100px);gap:10px;writing-mode: vertical-lr;}
-.wrap.step8 .grid_container.grid_ex2{grid-template-columns:repeat(3,100px);grid-template-rows:repeat(2,100px);gap:10px;writing-mode: vertical-lr;}
+.wrap.step8 .grid_container.grid_ex1{grid-template-columns:repeat(3,100px);grid-template-rows:repeat(2,100px);gap:10px;writing-mode: vertical-lr}
+.wrap.step8 .grid_container.grid_ex2{grid-template-columns:repeat(3,100px);grid-template-rows:repeat(2,100px);gap:10px;writing-mode: vertical-lr}
 .wrap.step8 .grid_container.grid_ex2 .grid_item1{grid-column:1 / 4;align-self:start}
 .wrap.step8 .grid_container.grid_ex2 .grid_item2{grid-column:1 / 3;grid-row:2 / 4;align-self:start}
 .wrap.step8 .grid_container.grid_ex2 .grid_item3{grid-column:3;grid-row:2 / 4;align-self:end;justify-self:end}
@@ -285,24 +285,24 @@ code .annotation{color:#11ad11}
 .wrap.step9 .grid_container.grid_ex1 li{width:auto;min-height:auto;margin:0}
 
 
-  /* Media Qeury */
-  @media (min-width: 500px) {
-    .wrap.step4 .grid_container.grid_ex4 {
-      grid-template-columns: repeat(9, 1fr);
-      grid-template-areas:
-        "hd hd hd hd   hd   hd   hd   hd   hd"
-        "sd sd sd main main main main main main"
-        "sd sd sd  ft  ft   ft   ft   ft   ft";
-    }
+/* Media Qeury */
+@media (min-width: 500px) {
+  .wrap.step4 .grid_container.grid_ex4 {
+    grid-template-columns: repeat(9, 1fr);
+    grid-template-areas:
+      "hd hd hd hd   hd   hd   hd   hd   hd"
+      "sd sd sd main main main main main main"
+      "sd sd sd  ft  ft   ft   ft   ft   ft";
   }
-  @media (min-width: 700px) {
-    .wrap.step4 .grid_container.grid_ex4 {
-      grid-template-areas:
-        "hd hd hd   hd   hd   hd   hd   hd hd"
-        "sd sd main main main main main ft ft";
-    }
+}
+@media (min-width: 700px) {
+  .wrap.step4 .grid_container.grid_ex4 {
+    grid-template-areas:
+      "hd hd hd   hd   hd   hd   hd   hd hd"
+      "sd sd main main main main main ft ft";
   }
-  @supports (display:grid) {
-    .wrap.step9 .grid_container.grid_ex1 ul{display:grid;grid-template-columns:repeat(3,1fr);gap:20px;margin:0}
-    .wrap.step9 .grid_container.grid_ex1 li{width:auto;min-height:auto;margin:0}
-  }
+}
+@supports (display:grid) {
+  .wrap.step9 .grid_container.grid_ex1 ul{display:grid;grid-template-columns:repeat(3,1fr);gap:20px;margin:0}
+  .wrap.step9 .grid_container.grid_ex1 li{width:auto;min-height:auto;margin:0}
+}
